# autovibez

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: create-release-assets.yml
assets/: README.md  autovibez.desktop
config/: config.inp
scripts/: create_release_assets.sh  package_release.py
src/: audio_capture.cpp  audio_manager.cpp  audio_manager.hpp  autovibez_app.cpp  autovibez_app.hpp  config_defaults.hpp  config_manager.cpp  config_manager.hpp  constants.hpp  input_handler.cpp  input_handler.hpp  loopback.cpp  main.cpp  mix_database.cpp  mix_database.hpp  mix_display.cpp  mix_display.hpp  mix_downloader.cpp  mix_downloader.hpp  mix_manager.cpp  mix_manager.hpp  mix_metadata.cpp  mix_player.cpp  mix_player.hpp  mp3_analyzer.cpp  mp3_analyzer.hpp  path_manager.cpp  path_manager.hpp  preset_manager.hpp  setup.cpp  setup.hpp  simple_ui.cpp  simple_ui.hpp  ui_system.cpp  ui_system.hpp
src/audio/: audio_capture.cpp  audio_capture.hpp  audio_manager.cpp  audio_manager.hpp  loopback.cpp  loopback.hpp  mix_player.cpp  mix_player.hpp  mp3_analyzer.cpp  mp3_analyzer.hpp  music_resource.hpp
src/core/: app_state.cpp  app_state.hpp  autovibez_app.cpp  autovibez_app.hpp  input_handler.cpp  input_handler.hpp  key_binding_manager.cpp  key_binding_manager.hpp  main.cpp  preset_manager.cpp  preset_manager.hpp  setup.cpp  setup.hpp
src/data/: base_metadata.hpp  config_manager.cpp  config_manager.hpp  database_interfaces.hpp  mix_database.cpp  mix_database.hpp  mix_database_refactored.cpp  mix_display.cpp  mix_display.hpp  mix_downloader.cpp  mix_downloader.hpp  mix_manager.cpp  mix_manager.hpp  mix_metadata.cpp  mix_metadata.hpp  mix_query_builder.cpp  mix_query_builder.hpp  mix_validator.cpp  mix_validator.hpp  smart_mix_selector.cpp  smart_mix_selector.hpp  sqlite_connection.cpp  sqlite_connection.hpp
src/platform/: opengl.h  path_constants.hpp  path_manager.cpp  path_manager.hpp
src/ui/: help_overlay.cpp  help_overlay.hpp  imgui_manager.cpp  imgui_manager.hpp  input_handler.cpp  message_overlay.cpp  message_overlay.hpp  message_overlay_wrapper.cpp  message_overlay_wrapper.hpp  preset_manager.cpp  simple_ui.cpp
src/utils/: audio_utils.cpp  audio_utils.hpp  console_output.cpp  console_output.hpp  constants.hpp  datetime_utils.cpp  datetime_utils.hpp  error_handler.cpp  error_handler.hpp  input_validator.cpp  input_validator.hpp  json_utils.cpp  json_utils.hpp  logger.cpp  logger.hpp  overlay_messages.cpp  overlay_messages.hpp  path_utils.cpp  path_utils.hpp  resource_guard.hpp  string_utils.cpp  string_utils.hpp  system_volume_controller.cpp  system_volume_controller.hpp  url_utils.cpp  url_utils.hpp  uuid_utils.cpp  uuid_utils.hpp
tests/: README.md
tests/feature/: audio_device_test.cpp  help_system_test.cpp
tests/fixtures/: test_fixtures.cpp  test_fixtures.hpp
tests/integration/: audio_capture_test.cpp  memory_cleanup_test.cpp  mix_manager_test.cpp  thread_safety_test.cpp
tests/mocks/: mock_audio_capture.hpp  mock_mix_downloader.hpp  mock_projectm.hpp
tests/unit/: audio_capture_test.cpp  audio_manager_test.cpp  audio_utils_test.cpp  base_metadata_test.cpp  config_manager_test.cpp  console_output_test.cpp  constants_test.cpp  datetime_utils_test.cpp  error_handler_test.cpp  error_handling_test.cpp  help_overlay_test.cpp  input_handler_test.cpp  input_validator_test.cpp  logger_test.cpp  mix_database_test.cpp  mix_downloader_test.cpp  mix_manager_test.cpp  mix_metadata_test.cpp  mix_player_test.cpp  mp3_analyzer_test.cpp  path_manager_test.cpp  preset_manager_test.cpp  resource_guard_test.cpp  string_utils_test.cpp  url_utils_test.cpp  uuid_utils_test.cpp
tests/unit/audio/: audio_capture_test.cpp  loopback_test.cpp  mix_player_test.cpp  mp3_analyzer_test.cpp
tests/unit/core/: autovibez_app_test.cpp  key_binding_manager_test.cpp  main_test.cpp  preset_manager_test.cpp  setup_test.cpp
tests/unit/data/: base_metadata_test.cpp  config_manager_test.cpp  mix_database_test.cpp  mix_downloader_test.cpp  mix_manager_test.cpp  mix_metadata_test.cpp  mix_query_builder_test.cpp  mix_validator_test.cpp  smart_mix_selector_test.cpp  sqlite_connection_test.cpp
tests/unit/integration/: app_workflow_test.cpp  config_chain_test.cpp  data_persistence_test.cpp  platform_integration_test.cpp  threading_concurrency_test.cpp
tests/unit/platform/: path_manager_test.cpp
tests/unit/ui/: help_overlay_test.cpp  message_overlay_test.cpp  message_overlay_wrapper_test.cpp
tests/unit/utils/: audio_utils_test.cpp  console_output_test.cpp  constants_test.cpp  datetime_utils_test.cpp  error_handler_test.cpp  json_utils_test.cpp  logger_test.cpp  overlay_messages_test.cpp  path_utils_test.cpp  string_utils_test.cpp  system_volume_controller_test.cpp  url_utils_test.cpp  uuid_utils_test.cpp
